name:                gray-extended
synopsis:           Gray encoding schemes
version:             1.5.8
homepage:            https://github.com/mhwombat/gray-extended
bug-reports:         https://github.com/mhwombat/gray-extended/issues
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          Amy de Buitléir <amy@nualeargais.ie>
copyright:           2010-2020 Amy de Buitléir
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  ChangeLog.md, README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Codec.Gray
  other-modules:       Paths_gray_extended
  build-depends:       base >= 4.11 && < 5

test-suite gray-extended-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          TestMain.hs
  default-language: Haskell2010
  other-modules:
      Codec.GrayQC
      Paths_gray_extended
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends: base >=4.11 && <5
                  , gray-extended
                  , QuickCheck
                 , test-framework
                , test-framework-quickcheck2
