cabal-version:      2.4
name:               gray-extended
version:            1.5.8
synopsis:           Gray encoding schemes
homepage:           https://github.com/mhwombat/gray-extended
bug-reports:        https://github.com/mhwombat/gray-extended/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2010-2021 Amy de Buitléir
category:           Math
extra-source-files: CHANGELOG.md, README.md

library
    exposed-modules:  Codec.Gray
    other-modules:    Paths_gray_extended
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite gray-extended-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestMain.hs
    other-modules:    Codec.GrayQC
                      Paths_gray_extended
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:    base
                      , gray-extended
                      , QuickCheck
                      , test-framework
                      , test-framework-quickcheck2
